--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <header class="header">
         <h1>Vanilla Calculator</h1>
       </header>
-      <section class="display">
+      <!-- <section class="display"> -->
         <div class="previousvalue"></div>
         <input type="text" class="currentvalue" value="0" readonly />
-      </section>
+      <!-- </section> -->
 
       <button class="clearEntry function">CE</button>
       <button class="clear function">C</button>
@@ -29,24 +29,24 @@
       </button>
       <button class="operator divide function">/</button>
 
-      <button class="number">7</button>
-      <button class="number">8</button>
-      <button class="number">9</button>
-      <button class="operator function">*</button>
+      <button class="number seven">7</button>
+      <button class="number eight">8</button>
+      <button class="number nine">9</button>
+      <button class="operator product function">*</button>
 
-      <button class="number">4</button>
-      <button class="number">5</button>
-      <button class="number">6</button>
-      <button class="operator function">-</button>
+      <button class="number four">4</button>
+      <button class="number five">5</button>
+      <button class="number six">6</button>
+      <button class="operator minus function">-</button>
 
-      <button class="number">1</button>
-      <button class="number">2</button>
-      <button class="number">3</button>
-      <button class="operator function">+</button>
+      <button class="number one">1</button>
+      <button class="number two">2</button>
+      <button class="number three">3</button>
+      <button class="operator addition function">+</button>
 
       <button class="signChange">+/-</button>
-      <button class="number">0</button>
-      <button class="number">.</button>
+      <button class="number zero">0</button>
+      <button class="number point">.</button>
       <button class="equals">=</button>
     </main>
   </body>
